--- a/src/main/webapp/ckbx.html
+++ b/src/main/webapp/ckbx.html
@@ -196,10 +196,10 @@ $("input.submit_01").click(function(){
 	var positionid=$("input[type=hidden][name=positionid]").val();
 	var employeeId=$("input[type=hidden][name=employeeId]").val();
 	var departmentId=$("input[type=hidden][name=departmentId]").val();
-	alert(statusId);
-	alert(startTime);
-	alert(endTime);
-	load(1,2,startTime,endTime,statusId,positionid,employeeId,departmentId);//初始化
+	//alert(statusId);
+	//alert(startTime);
+	//alert(endTime);
+	load(1,3,startTime,endTime,statusId,positionid,employeeId,departmentId);//初始化
 });
 //首页
 $("#shou").click(function(){
