--- a/src/main/webapp/qjList.html
+++ b/src/main/webapp/qjList.html
@@ -17,19 +17,19 @@
 		<div class="t">请假列表</div>
 		<div class="pages">
 			<div class="forms">
-				<form id="leave_searchLeave_action" name="queryForm"
+				<!-- <form id="leave_searchLeave_action" name="queryForm"
 					action="ckqj.html"
-					method="get">
+					method="get"> -->
 					<label for="time">开始时间</label> <input type="text" name="sTime"
 						value="" id="startDate" class="nwinput"> <label
 						for="end-time">结束时间</label> <input type="text" name="eTime"
-						value="" id="endDate" class="nwinput" readonly=""> <input
+						value="" id="endDate" class="nwinput"> <input
 						type="hidden" name="pageNo" value="1"> <input
 						type="hidden" name="pageSize" value="5"> <input
 						type="submit" id="leave_searchLeave_action_0" value="查询"
 						class="submit_01">
 
-				</form>
+				<!-- </form> -->
 			</div>
 			<!--增加报销单 区域 开始-->
 			<table id="vmLeave" width="90%" border="0" cellspacing="0" cellpadding="0"
@@ -154,6 +154,24 @@ $(document).on("click",".search",function(){
 	window.sessionStorage.setItem("zhi",zhi);
 	window.sessionStorage.setItem("leaveId",leaveId);
 	location.href="qjxq.html";
+});
+//点击带条件分页查询
+$("input.submit_01").click(function(){
+	var startTime=$("input[name=sTime]").val();
+	var endTime=$("input[name=eTime]").val();
+	if (startTime=="") {
+		startTime=null;
+	}
+	if (endTime=="") {
+		endTime=null;
+	}
+	var positionid=$("input[type=hidden][name=positionid]").val();
+	var employeeId=$("input[type=hidden][name=employeeId]").val();
+	var departmentId=$("input[type=hidden][name=departmentId]").val();
+	//alert(statusId);
+	//alert(startTime);
+	//alert(endTime);
+	load(1,3,startTime,endTime,positionid,employeeId,departmentId);//初始化
 });
 //点击进行审批
 $(document).on("click",".sub",function(){
