第5次OA项目提交

--- a/src/main/webapp/zy.html
+++ b/src/main/webapp/zy.html
@@ -168,7 +168,7 @@
 						</dd>
 					</dl>
 
-					<dl>
+					<dl id="xianshi">
 						<dt onclick="this.parentNode.className=this.parentNode.className=='open'?'':'open';">统计报表</dt>
 						<dd>
 							<a target="rightFrame" href="ydb.html">报销单月度统计</a>
@@ -197,9 +197,14 @@
 	<script type="text/javascript" src="js/vue.js" ></script>
 	<script type="text/javascript" src="js/jq_ajax_config.js" ></script>
 	<script type="text/javascript">
+		$("#xianshi").hide();
 		//初始化数据
 		$.getJSON(`/project_4/api/emps/getemp`,function(emp){
 			$("#name").text(emp.employeeName);
+			if (emp.employeeId==1006) {
+				//总经理
+				$("#xianshi").show();
+			}
 			//查询部门
 			var positionId=emp.positionId;
 			$.getJSON(`/project_4/api/emps/chazhiwei/${positionId}`,function(posi){
