第6次提交修改

--- a/src/main/webapp/xzbx.html
+++ b/src/main/webapp/xzbx.html
@@ -157,7 +157,7 @@ $(".submit_01").click(function(){
 		var positionId=$("input[type=hidden][name=positionId]").val();
 		var nextDealMan=$("input[type=hidden][name=nextDealMan]").val();
 		var statusId=document.claimForm.status.value;//状态id
-		alert(statusId);
+		//alert(statusId);
 		//组装json数据
 		var rei = {};
 		rei["reimburseId"] = reimburseId;
