--- a/src/main/webapp/zy.html
+++ b/src/main/webapp/zy.html
@@ -139,7 +139,7 @@
 		</div>
 		<div id="vmList" class="status" id="JiaZaiZy">
 			<div class="global-width">
-				<span class="usertype">【登录角色：<span id="zhiwei"></span>】<a id="loginOut" href="/jboa/loginout" onclick="return confirm('确定要退出登录吗？')">退出登录</a></span> <span id="name"></span>你好！欢迎访问青鸟办公管理系统！
+				<span class="usertype">【登录角色：<span id="zhiwei"></span>】<a id="loginOut" href="javascript:void(0);">退出登录</a></span> <span id="name"></span>你好！欢迎访问青鸟办公管理系统！
 
 			</div>
 		</div>
@@ -210,6 +210,13 @@
 			$.getJSON(`/project_4/api/emps/chazhiwei/${positionId}`,function(posi){
 				$("#zhiwei").text(posi.positionName);
 			});
+		});
+		//退出
+		$("#loginOut").click(function(){
+			var flag=confirm('确定要退出登录吗？');
+			if (flag==true) {
+				location.href='index.html';
+			}
 		});
 		/**var vmList=new Vue({
 			el:"#vmList",
